--- a/recipe_app/recipes/templates/recipes/create_with_text.html
+++ b/recipe_app/recipes/templates/recipes/create_with_text.html
@@ -17,33 +17,29 @@
     </div>
 </div>
 
-<div class="row-wrapper" style="margin-bottom: 0.8rem; display: flex; justify-content: center; gap: 0.8rem;">
-    <div class="card" style="max-width: 194px; padding: 0.8rem;">
-        <a href="{% url 'recipes:create_with_text' %}">
-            <div class="navlink-mobile">               
-                <div style="display: flex; align-items: center; gap: 0.8rem;">       
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-pen"><path d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"/></svg>    
-                    Text
-                </div>          
+<div class="row-wrapper" style="margin-bottom: 0.8rem; display: flex; justify-content: center; gap: 1.2rem;">
+    <a href="{% url 'recipes:create_with_text' %}" class="navlink-mobile">
+        <div class="card" style="width: 120px; padding: 0.8rem;">             
+            <div style="display: flex; align-items: center; gap: 0.8rem;">       
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-pen"><path d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/><path d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"/></svg>    
+                Text
+            </div>          
+        </div>
+    </a>
+    <a href="{% url 'recipes:create_with_image' %}" class="navlink-mobile"> 
+        <div class="card" style="width: 120px; padding: 0.8rem;">                    
+            <div style="display: flex; align-items: center; gap: 0.8rem;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-image"><rect width="18" height="18" x="3" y="3" rx="2" ry="2"/><circle cx="9" cy="9" r="2"/><path d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"/></svg>            
+                Bild
             </div>
-        </a>
-    </div>
-    <div class="card" style="max-width: 194px; padding: 0.8rem;">
-        <a href="{% url 'recipes:create_with_image' %}">
-            <div class="navlink-mobile">                      
-                <div style="display: flex; align-items: center; gap: 0.8rem;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-image"><rect width="18" height="18" x="3" y="3" rx="2" ry="2"/><circle cx="9" cy="9" r="2"/><path d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"/></svg>            
-                    Bild
-                </div>
-            </div>
-        </a>
-    </div>
+        </div>
+    </a>
 </div>
 
 <div class="row-wrapper section-row card" style="margin-top: 0; margin-bottom: 0;">
     <div class="row-content" style="margin-top: 0rem; margin-bottom: 0rem;">
         <div class="form-header">
-            ENTWURF
+            PROMPT
         </div>
     </div>
     <div class="row-content" style="margin-top: 1rem; margin-bottom: 1rem; width: 100%">
