--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -47,7 +47,7 @@
                             />
                         </svg>
                             {% if preview.avg_rating %}
-                                &thinsp;{{ preview.avg_rating }}
+                                &thinsp;{{ preview.avg_rating|floatformat:1  }}
                             {% else %}
                                 <span></span>
                             {% endif %}
