--- a/recipe_app/recipe_app/templates/recipe_app/layout.html
+++ b/recipe_app/recipe_app/templates/recipe_app/layout.html
@@ -33,7 +33,7 @@
                 {% if user.is_authenticated %}
                 <div style="display: flex; gap: 0.8rem;">
                     <div style="display: flex; align-items: center; gap: 0.4rem; margin-right: 0.4rem;">
-                        <button class="navlink-mobile" id="profile-button" style="" title="Profil ansehen">
+                        <button class="navlink-mobile" id="profile-button" style="" title="Rezept erstellen">
                             <a href="{% url 'recipes:create_with_text' %}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
                             </a>
