--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -304,15 +304,14 @@ main {
     font-size: 1.6rem;
     font-weight: 500;
     width: 100%;
-    text-align: center;
-    margin-top: 1rem;
+    text-align: left;
 }
 
 .recipe-description {
     font-size: 1.2rem;
     font-weight: 300;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: 1.2rem;
 }
 
@@ -398,7 +397,6 @@ main {
     justify-content: center;
     align-items: center;
     border-radius: 999px;
-    padding: 0.2rem 0.8rem 0.3rem 0.8rem;
 }
 
 .recipe-difficulty-1 {
@@ -432,8 +430,12 @@ main {
 }
 
 .servings-buttons-container {
+    border-radius: 99px;
+    background-color: var(--element-color-2);
+    padding: 0.1rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 0.2rem;
     button {
         width: 1.4rem;
@@ -451,8 +453,7 @@ main {
 }
 
 .servings-button:hover {
-    background-color: var(--element-color-2);
-    outline: 0.2rem solid var(--element-color-2);
+    color: var(--accent-color);
 }
 
 .title {
@@ -686,7 +687,7 @@ main {
 }
 
 .recipe-image-container {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0;
 }
 
 .recipe-image {
@@ -889,4 +890,19 @@ textarea {
 .shopping-checkbox {
     cursor: pointer;
     accent-color: var(--accent-color);
+}
+
+.image-upload-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8rem;
+}
+
+.image-form-field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.4rem;
 }
