--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -363,7 +363,7 @@ main {
 }
 
 .recipe-properties-container {
-    padding: 0.2rem 0.5rem 0 0.5rem;
+    padding: 0rem 0.5rem 0.4rem 0.5rem;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -457,16 +457,15 @@ main {
 }
 
 .title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     line-height: 1.4rem;
     font-weight: 400;
     margin-bottom: 1rem;
 }
 
 .description {
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     font-weight: 300;
-    margin-bottom: 0.8rem;
     hyphens: auto;
 }
 
@@ -687,19 +686,31 @@ main {
 }
 
 .recipe-image-container {
+    position: relative;
+    width: 100%;
+    height: 100%;;
+    aspect-ratio: 1 / 1;
     margin-bottom: 0;
 }
 
+
 .recipe-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    border-radius: 6px;
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 5px;
+    
 }
 
 .stars {
     display: flex;
     align-items: flex-end;
     gap: 0.2rem;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 500;
     color: var(--text-color-2);
 }
@@ -711,8 +722,8 @@ main {
 
 .stars svg {
     color: gold;
-    height: 1.2rem;
-    width: 1.2rem;
+    height: 1.1rem;
+    width: 1.1rem;
 }
 
 .overlay-stars svg {
