--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -34,7 +34,26 @@
 <div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         {% for preview in recipes %}
-            <div class="card card-clickable preview-card">
+            <div class="card card-clickable preview-card" style="padding: 0.4rem;">
+                <a href="{{ preview.get_absolute_url }}" class="clickable-wrapper">
+                    <div class="card-recipe-container">
+                        <div style="display: flex; column-gap: 0.8rem; row-gap: 0.2rem; justify-content: left; align-items: center; {% if preview.image %} margin-bottom: 0.4rem; {% endif %}">
+                            {% if preview.image %}
+                                <div class="recipe-image-container" style="width: 60px;">
+                                        <img class="recipe-image" src="{{ preview.image.image.url }}" alt="{{ preview.image.alt_text }}">
+                                </div>
+                            {% endif %}
+                            <div>
+                                <div class="title" style="margin-bottom: 0.1rem;">{{ preview.title }}</div>
+                                <div style="font-size: 0.8rem; font-weight: 500; color: indianred; line-height: 1.4rem;">
+                                    {{ preview.get_difficulty_display }} • {{ preview.time_total|time_converter}} 
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description">{{ preview.description }}</div>
+                    </div>
+                </a>
                 <div class="recipe-properties-container">
                     <div class="stars">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -53,10 +72,8 @@
                             {% endif %}
                             <span class="recipe-count-display">({{ preview.rating_count }})</span>
                     </div>
+
                     <div class="recipe-user-panel">
-                        <button class="panel-icon" id="share-button-{{ preview.id }}" data-slug="{{ preview.slug }}" style="transform: scale(0.9)">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-share-2"><circle cx="18" cy="5" r="3"/><circle cx="6" cy="12" r="3"/><circle cx="18" cy="19" r="3"/><line x1="8.59" x2="15.42" y1="13.51" y2="17.49"/><line x1="15.41" x2="8.59" y1="6.51" y2="10.49"/></svg>
-                        </button>
                         {% if request.user.is_authenticated %}
                             {% if preview.is_favorite %}
                                 <button class="panel-icon" id="bookmark-icon-saved-{{ preview.id }}" style="display: flex">
@@ -76,35 +93,6 @@
                         {% endif %}
                     </div>
                 </div>
-                <a href="{{ preview.get_absolute_url }}" class="clickable-wrapper">
-                    <div class="card-recipe-container">
-                        <div style="display: flex; column-gap: 0.8rem; row-gap: 0.2rem; justify-content: left; align-items: center; margin-top: 0.4rem; margin-bottom: 0.2rem;">
-                            {% if preview.image %}
-                                <div class="recipe-image-container" style="width: 80px;">
-                                        <img class="recipe-image" src="{{ preview.image.image.url }}" alt="{{ preview.image.alt_text }}">
-                                </div>
-                            {% endif %}
-                            <div>
-                                <div class="title" style="margin-bottom: 0.3rem;">{{ preview.title }}</div>
-                                <div style="font-size: 1rem; font-weight: 500; color: indianred; line-height: 1.4rem;">
-                                    {{ preview.get_difficulty_display }} • {{ preview.time_total|time_converter}} 
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="description">{{ preview.description }}</div>
-                        <div class="preview-card-bottom-panel">
-                            <div class="author">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                                {% if preview.author %}
-                                    {{ preview.author }}
-                                {% else %}
-                                    <span>Unbekannt</span>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </a>
             </div>
         {% endfor %} 
     </div>
